--- a/basemvp/build.gradle
+++ b/basemvp/build.gradle
@@ -35,4 +35,20 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    //retrofit
+    api 'com.squareup.retrofit2:retrofit:2.5.0'
+    api 'com.squareup.retrofit2:converter-gson:2.5.0'
+    api 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+    //okhttp
+    api 'com.squareup.okhttp3:okhttp:3.6.0'
+    //RxJava依赖
+    api 'io.reactivex.rxjava2:rxjava:2.2.7'
+    api 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    //Butterknife
+    api 'com.jakewharton:butterknife:10.1.0'
+    api 'com.jakewharton:butterknife-compiler:10.1.0'
+
+    api 'com.github.bumptech.glide:glide:4.11.0'//图片
 }
